fix config scheme
